demote to java8 and get it compiling on linux